DCS-2208 update eligible form content

--- a/server/views/forms/eligible.pug
+++ b/server/views/forms/eligible.pug
@@ -2,29 +2,30 @@ extends forms-layout
 
 block content
 
-  +header('eligible')
+  +header('Eligible')
 
-  p You are eligible for early release from prison on home detention curfew (tagging).
+  p You are eligible for early release from prison on Home Detention Curfew (tagging).
 
   h2 What this means for you
   p This means you could be released from prison on #{SENT_HDCED} if you:
 
   ul.disc
-    li behave well in prison
-    li have somewhere to live after you leave prison
+    li behave well in prison; and
+    li have somewhere to live after you leave prison where you can be safely managed.
 
   p If you are released early you would have to:
 
   ul.disc
-    li stay at home during certain hours (your curfew)
-    li wear an electronic tag - to make sure you follow your curfew
+    li stay at home during certain hours (your curfew); and
+    li wear an electronic tag - to make sure you follow your curfew.
+    li allow EMS provider staff access to your home to check the equipment
 
 
   p You would have a curfew and electronic tag until #{SENT_CRD}.
 
   h2 What happens next
-  p Think about where you could live if you were released on #{SENT_HDCED}. We will give you a form to fill in with the address details closer to the date you can be released on home detention curfew.
+  p Think about where you could live if you were released on #{SENT_HDCED}. We will give you a form to fill in with the address details closer to the date you can be released on Home Detention Curfew.
 
   p If you can, think of a second address in case your first choice is not suitable.
 
-  p If you don't have a place to stay, Bail and Accommodation Support Services (BASS) could help you find somewhere. We will pass your details on to BASS if you need it
+  p If you don't have a place to stay, the Community Accommodation Service Tier 2 (CAS2) could help you find somewhere. We will pass your details on to CAS2 if you need it.
