--- a/server/views/forms/includes/formsHeader.pug
+++ b/server/views/forms/includes/formsHeader.pug
@@ -1,5 +1,5 @@
 mixin header(title)
-  h1 Home detention curfew (tagging): #{title}
+  h1 Home Detention Curfew (tagging): #{title}
 
   include offenderDetails
 
