DCS-2209 presumed unsuitable form content changes

--- a/server/views/forms/unsuitable.pug
+++ b/server/views/forms/unsuitable.pug
@@ -2,17 +2,17 @@ extends forms-layout
 
 block content
 
-  +header('not suitable')
+  +header('Presumed Unsuitable')
 
-  p We checked to see if you're eligible for release from prison on home detention curfew (tagging).
+  p We checked to see if you're eligible for release from prison on Home Detention Curfew (tagging).
 
   p Although you are eligible by law, you are presumed unsuitable for the scheme because #{UNSUITABLE_REASON}.
 
-  p This means you would only be considered for home detention curfew in exceptional circumstances.
+  p This means you would only be considered for Home Detention Curfew in exceptional circumstances.
 
-  h2 Don't agree with this decision?</h2>
+  h2 Think your case is exceptional?</h2>
 
-  p If you want to challenge this decision you need to follow your prison complaints process, although we'll only change our decision in exceptional circumstances.
+  p You may make representations to the Governor as to why you should be released on HDC. You will need to show that your case stands out and that HDC could be justified despite the presumption against it in your case.
 
   p Ask prison staff about how to do this.
 
