--- a/server/views/eligibility/includes/suitability.pug
+++ b/server/views/eligibility/includes/suitability.pug
@@ -31,9 +31,10 @@ block unsuitableForm
             li - Possession of an offensive weapon
             li - Possession of firearms with intent
             li - Cruelty to Children
-            li - Racially aggravated offences
-            li - Offender currently serving for a terrorism or terrorism-related offence NOT in schedule 19ZA of the Criminal Justice Act 2003
+            li - Offences aggravated on the grounds of race, religion & sexual orientation
+            li - Terrorism
             li - COVID-19 related offences
+            li - Stalking, harassment, coercion and control, non-fatal strangulation or suffocation
       div.multiple-choice
         input(type='checkbox' name='reason[]' id='historyOfTerrorism' value='historyOfTerrorism' checked=vals.indexOf('historyOfTerrorism') !== -1)
         label(for='historyOfTerrorism') Offender not currently serving for a terrorism or terrorism-related offence but with a history of such offending
