--- a/server/views/eligibility/includes/excluded.pug
+++ b/server/views/eligibility/includes/excluded.pug
@@ -43,4 +43,4 @@ block excludedForm
           |  (i.e. not just those with a Deportation Order)
       div.multiple-choice
         input(type='checkbox' name='reason[]' id='cja2003_19ZA' value='cja2003_19ZA' checked=vals.indexOf('cja2003_19ZA') !== -1)
-        label(for='cja2003_19ZA') Offender currently serving for a terrorism or terrorism-related offence in schedule 19ZA of the Criminal Justice Act 2003
+        label(for='cja2003_19ZA') Offender currently serving for a specified terrorism or terrorism connected offence
