DCS-2213 updated refused.pug and config

--- a/server/views/forms/refused.pug
+++ b/server/views/forms/refused.pug
@@ -4,7 +4,7 @@ block content
 
   +header('refused')
 
-  p We have checked your case and decided that you will not be released on home detention curfew (tagging). This is because #{REFUSAL_REASON}.
+  p We have assessed your case and decided that you will not be released on Home Detention Curfew (tagging). This is because #{REFUSAL_REASON}.
 
   p You will be released from prison on #{SENT_CRD}.
 
