--- a/server/views/eligibility/includes/suitability.pug
+++ b/server/views/eligibility/includes/suitability.pug
@@ -20,6 +20,12 @@ block unsuitableForm
       div.multiple-choice
         input(type='checkbox' name='reason[]' id='recalled' value='recalled' checked=vals.indexOf('recalled') !== -1)
         label(for='recalled') Recalled for poor behaviour during a previous period of HDC
+      div.multiple-choice 
+        input(type='checkbox' name='reason[]' id='categoryA' value='categoryA' checked=vals.indexOf('categoryA') !== -1)
+        label(for='categoryA') Category A prisoner
+      div.multiple-choice 
+        input(type='checkbox' name='reason[]' id='serving4YearsOrMoreOverseas' value='serving4YearsOrMoreOverseas' checked=vals.indexOf('serving4YearsOrMoreOverseas') !== -1)
+        label(for='serving4YearsOrMoreOverseas') Sentenced to 4 years or more by an overseas court and repatriated to the UK with less than 4 years to serve
     div.pure-u-4-24
     div.pure-u-1.pure-u-md-10-24
       div.multiple-choice
