--- a/server/views/forms/includes/mainOccupier.pug
+++ b/server/views/forms/includes/mainOccupier.pug
@@ -1,4 +1,5 @@
-ul.byHand
-  li Name:
-  li Telephone:
-  li What is their relationship to you?
+div.box(style={height: '5cm'}).no-break
+  ul.byHand
+    li Name:
+    li Telephone:
+    li What is their relationship to you?
