DCS-2212 information about address checks form content changes

--- a/server/views/forms/address_checks.pug
+++ b/server/views/forms/address_checks.pug
@@ -2,33 +2,36 @@ extends forms-layout
 
 block content
 
-  +header('information about address checks')
+  +header('Information about address checks')
 
-  p During your first week in prison we said you're eligible for home detention curfew (tagging).
+  h2 What you need to know
 
-  p Under home detention curfew you would have to:
+  p We previously told you that you're eligible for Home Detention Curfew (tagging).
+
+  p Under Home Detention Curfew you would have to:
 
   ul.disc
-    li stay at home during certain hours (your curfew)
+    li stay at home during certain hours (your curfew); and
     li wear an electronic tag - to make sure you follow your curfew
+    li allow EMS provider staff access to your home to check the equipment
 
   p It would mean you could be released on #{SENT_HDCED}
 
   h2 What you need to do now
 
-  p You now need to fill in the address form and return it by
+  p You now need to fill in the 'Address Form' and return it by
 
   h2 What we will do
 
   p We will:
 
   ol
-    li Check that the address you provided is suitable - this includes talking to anyone else who lives there.
-    li Assess any risks of releasing you on home detention curfew.
+    li Ask probation to check that the address you provided is suitable - this includes talking to anyone else who lives there.
+    li Assess any risks of releasing you on Home Detention Curfew to the proposed address.
     li Let you know our final decision (in writing).
 
   h2 Not interested?
 
-  p Not interested in being released early with home detention curfew (tagging)? Just fill in the 'opt out' form.
+  p Not interested in being released early with Home Detention Curfew (tagging)? Just fill in the 'Opt out' form.
 
 
