DCS-2217 licence variation form content changes

--- a/server/views/forms/licence_variation.pug
+++ b/server/views/forms/licence_variation.pug
@@ -6,7 +6,7 @@ block content
 
   table.semi-wide.midMarginBottom
     tr.spaceUnder
-      td Prisoner name: #{OFF_NAME}
+      td Name: #{OFF_NAME}
       td DoB: #{prisoner.dateOfBirth}
     tr.spaceUnder
       td NOMIS: #{OFF_NOMS}
@@ -16,12 +16,10 @@ block content
     tr.spaceUnder
       td HDC release date: #{SENT_CRD}
     tr.spaceUnder
-      td Curfew address: #{CURFEW_ADDRESS}
+      td Curfew Address: #{CURFEW_ADDRESS}
     tr.spaceUnder
       td Second Curfew Address (if required):
       
-  p Is the prisoner partaking in the Acquisitive Crime project with a mandatory trail monitoring<br>condition? Yes No
-
   p The following changes have been made to the above’s licence conditions  (copy of revised licence attached where changes are permanent):
 
   div.box(style={height: '7cm'}).midMarginBottom
@@ -41,4 +39,4 @@ block content
   
   p Date:
 
-  p.bold A copy of this form must be forwarded to the EMS provider, the probation provider, and the police.
+  p.bold A copy of this form must be forwarded to the EMS provider and the police.
