DCS-2217 form title capitalisation

--- a/server/views/forms/licence_variation.pug
+++ b/server/views/forms/licence_variation.pug
@@ -2,7 +2,7 @@ extends forms-layout
 
 block content
 
-  h1 Home detention curfew (tagging): Licence variation
+  h1 Home Detention Curfew (tagging): Licence Variation
 
   table.semi-wide.midMarginBottom
     tr.spaceUnder
