DCS-2212 address form content update

--- a/server/views/forms/includes/addressEntry.pug
+++ b/server/views/forms/includes/addressEntry.pug
@@ -8,7 +8,9 @@ div.box(style={height: '5cm'}).no-break
     li Telephone:
 
 div.no-break
-  h2 Who is the main person living at this address? You should provide the landlord's details if no one else lives there.
+  h2 Who is the main person living at this address? 
+  
+  p We will contact them to make sure the address is suitable for you to live there. Provide the landlord's details if no one else lives there.
 
   include mainOccupier
 
@@ -39,4 +41,4 @@ div.no-break
 
   p If you answered yes, provide details:
 
-  div.box(style={height: '3cm'})
+  div.box(style={height: '2.7cm'})
