--- a/server/views/forms/includes/otherResident.pug
+++ b/server/views/forms/includes/otherResident.pug
@@ -1,4 +1,4 @@
 ul.byHand
-  li Name
-  li Relationship to you
-  li Age or date of birth (if under 18)
+  li Name:
+  li Relationship to you:
+  li Age or date of birth (if under 18):
