DCS-2216 dotted line content update to cancellation variation form

--- a/server/views/forms/cancel_agency_notification.pug
+++ b/server/views/forms/cancel_agency_notification.pug
@@ -25,7 +25,7 @@ block content
     tr.spaceUnder
       td Curfew address: #{CURFEW_ADDRESS}
 
-  p It has been decided that the above offender should not be released on HDC; or the following details of the Agency Notification issued on &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; are amended as below.
+  p It has been decided that the above offender should not be released on HDC; or the following details of the Agency Notification issued on .............................. are amended as below.
 
   div.box(style={height: '7cm'}).largeMarginBottom
 
