DCS-2216 cancellation variation form content changes (#1462)
* DCS-2216 cancellation variation form content changes

* DCS-2216 dotted line content update to cancellation variation form

--- a/server/views/forms/cancel_agency_notification.pug
+++ b/server/views/forms/cancel_agency_notification.pug
@@ -2,7 +2,7 @@ extends forms-layout
 
 block content
 
-  h1 Home detention curfew (tagging): cancellation or variation of agency notification
+  h1 Home Detention Curfew (tagging): Cancellation or variation of agency notification
 
   table.semi-wide
     tr.spaceUnder
@@ -25,10 +25,10 @@ block content
     tr.spaceUnder
       td Curfew address: #{CURFEW_ADDRESS}
 
-  p It has been decided that the above offender should not be released on HDC; or the following details of the agency notification previously issued, are amended as below.
+  p It has been decided that the above offender should not be released on HDC; or the following details of the Agency Notification issued on .............................. are amended as below.
 
   div.box(style={height: '7cm'}).largeMarginBottom
 
-  p.bold A copy of this form must be forwarded to the EMS provider, the probation provider, and the police.
+  p.bold A copy of this form must be forwarded to the EMS provider, the probation service, and the police.
 
     
