DCS-2212 corrected Opt-out content

--- a/server/views/forms/address.pug
+++ b/server/views/forms/address.pug
@@ -38,7 +38,7 @@ block content
 
   h2.pagebreak Not interested?
 
-  p Not interested in being released early with Home Detention Curfew (tagging)? Just fill in the 'Opt out' form.
+  p Not interested in being released early with Home Detention Curfew (tagging)? Just fill in the 'Opt-out' form.
 
   h2
     input#tick(type='checkbox')
