--- a/server/views/forms/optout.pug
+++ b/server/views/forms/optout.pug
@@ -2,7 +2,7 @@ extends forms-layout
 
 block content
 
-  +header('Opt out')
+  +header('Opt-out')
 
   p I do not want to be considered for Home Detention Curfew (tagging) because:
 
