--- a/server/views/forms/address_checks.pug
+++ b/server/views/forms/address_checks.pug
@@ -32,6 +32,6 @@ block content
 
   h2 Not interested?
 
-  p Not interested in being released early with Home Detention Curfew (tagging)? Just fill in the 'Opt out' form.
+  p Not interested in being released early with Home Detention Curfew (tagging)? Just fill in the 'Opt-out' form.
 
 
