--- a/server/views/forms/approved.pug
+++ b/server/views/forms/approved.pug
@@ -35,6 +35,7 @@ block content
   p You will have to go back to prison if you:
 
   ul.disc
+    li damage the tagging and monitoring equipment
     li do not to allow EMS provider staff access to check the equipment
     li are not at home during your curfew
     li break any of the conditions on your licence
