--- a/server/views/forms/approved.pug
+++ b/server/views/forms/approved.pug
@@ -2,7 +2,7 @@ extends forms-layout
 
 block content
 
-  +header('approved')
+  +header('Approved')
 
   p We have checked your case and agreed that you can leave prison early with a tag.
 
@@ -18,9 +18,9 @@ block content
   p You must wear an electronic tag and stay at home during certain hours until #{SENT_CRD}. We will explain:
 
   ul.disc
-    li the times you must stay at home (your curfew)
-    li the rules you must follow (conditions)
-    li who your probation officer is and when you first need to report to them
+    li the times you must stay at home (your curfew);
+    li the rules you must follow (conditions); and
+    li who your probation officer is and when you first need to report to them.
 
 
   h3 Your electronic tag
@@ -28,8 +28,8 @@ block content
   p The person fitting the electronic tag will meet you at your address on the day you're released. They will:
 
   ul.disc
-    li fit you with the tag
-    li set up the monitoring equipment
+    li fit you with the tag; and
+    li set up the monitoring equipment.
 
 
   p You will have to go back to prison if you:
