--- a/server/views/curfew/curfewAddressReview.pug
+++ b/server/views/curfew/curfewAddressReview.pug
@@ -19,12 +19,16 @@ block content
     form(method="post")
       input(type="hidden" name="_csrf" value=csrfToken)
       input(type="hidden" name="bookingId" value=bookingId || '')
+      input(type="hidden" name="version" value=curfewAddressReviewVersion || '')
       div.pure-g.largePaddingBottom
         div.pure-u-1.pure-u-sm-5-12.pure-g
           div.form-group.inline.paddingTop
             if !licenceStatus.decisions.offenderIsMainOccupier
 
-              h3.heading-medium Does the main occupier consent to HDC?
+              if curfewAddressReviewVersion === '1'
+                h3.heading-medium Does the main occupier consent to HDC?
+              else 
+                h3.heading-medium Have you spoken to the main occupier and do they consent to HDC?
 
               div.multiple-choice(data-target="consentForm")
                 input#hdcConsentYes(type="radio" checked=data.consent === 'Yes' name="consent" value="Yes")
