--- a/server/views/proposedAddress/includes/addressDetail.pug
+++ b/server/views/proposedAddress/includes/addressDetail.pug
@@ -1,4 +1,5 @@
 mixin addressDetail(type, address, review)
+  - var curfewAddressReviewVersion1 = data.curfew && data.curfew.curfewAddressReview && data.curfew.curfewAddressReview.version === '1'
 
   div.pure-g.smallPaddingBottom(id="addressDetails")
     div.pure-u-1.pure-u-sm-1-2.pure-g
@@ -63,7 +64,10 @@ mixin addressDetail(type, address, review)
     div.pure-g.largeMarginTop.paddingTop.smallPaddingBottom.borderTopLight
       div.pure-u-1.pure-u-md-1-2
         div.pure-u-md-4-5
-          | Does the main occupier consent to HDC?
+          if curfewAddressReviewVersion1
+            | Does the main occupier consent to HDC?
+          else 
+            | Have you spoken to the main occupier and do they consent to HDC?
           p.bold(id="consent-" + type) #{review.consent}
 
       if(review.consent === 'Yes')
