--- a/server/views/forms/curfewAddress.pug
+++ b/server/views/forms/curfewAddress.pug
@@ -26,8 +26,10 @@ block content
 
   if riskManagement.version === '1'
     include includes/riskV1
-  else
+  else if riskManagement.version === '2'
     include includes/riskV2
+  else
+    include includes/riskV3
 
   include includes/victim
 
