--- a/server/views/curfew/curfewAddressReviewV1.pug
+++ b/server/views/curfew/curfewAddressReviewV1.pug
@@ -13,22 +13,18 @@ block content
       h2.heading-large Proposed curfew address
 
       if address
-
         +addressDetail('curfew', address, {}, {})
 
     form(method="post")
       input(type="hidden" name="_csrf" value=csrfToken)
       input(type="hidden" name="bookingId" value=bookingId || '')
-      input(type="hidden" name="version" value=curfewAddressReviewVersion || '')
+      input(type="hidden" name="version" value=version || '')
       div.pure-g.largePaddingBottom
         div.pure-u-1.pure-u-sm-5-12.pure-g
           div.form-group.inline.paddingTop
             if !licenceStatus.decisions.offenderIsMainOccupier
 
-              if curfewAddressReviewVersion === '1'
-                h3.heading-medium Does the main occupier consent to HDC?
-              else 
-                h3.heading-medium Have you spoken to the main occupier and do they consent to HDC?
+              h3.heading-medium Does the main occupier consent to HDC?
 
               div.multiple-choice(data-target="consentForm")
                 input#hdcConsentYes(type="radio" checked=data.consent === 'Yes' name="consent" value="Yes")
