DCS-2239 add risk management question for consulting the pom

--- a/server/views/forms/includes/riskV3.pug
+++ b/server/views/forms/includes/riskV3.pug
@@ -25,3 +25,7 @@ div.no-break.smallPaddingBottom#risk
   p Is it possible to manage the offender safely in the community if released to the proposed address?
     br
     span.entry #{riskManagement.manageInTheCommunity}
+
+  p Have you consulted the POM for information about the offender’s current progress in custody?
+    br
+    span.entry #{riskManagement.pomConsultation}
