DCS-2212 small formatting fix to address pdf form

--- a/server/views/forms/address.pug
+++ b/server/views/forms/address.pug
@@ -36,11 +36,11 @@ block content
     li Assess any risks of releasing you on Home Detention Curfew to the proposed address.
     li Let you know our final decision (in writing).
 
-  h2.pagebreak Not interested?
+  h2 Not interested?
 
   p Not interested in being released early with Home Detention Curfew (tagging)? Just fill in the 'Opt-out' form.
 
-  h2
+  h2.pagebreak
     input#tick(type='checkbox')
     label(for="tick") I do not have an address
   
