DCS-2241 add new page to DM approval journey

--- a/server/views/approval/mandatoryCheck.pug
+++ b/server/views/approval/mandatoryCheck.pug
@@ -19,7 +19,7 @@ block content
 
           div.paddingBottom.smallPaddingTop
             div.pure-u-1.inlineButtons
-              a#continueBtn.requiredButton.button.smallMarginTop(href="/hdc/approval/release/" + bookingId role="button") Continue
+              a#continueBtn.requiredButton.button.smallMarginTop(href="/hdc/approval/consideration/" + bookingId role="button") Continue
               a#returnToChecklistBtn.requiredButton.button.button-secondary.smallMarginTop(href="/hdc/taskList/" + bookingId role="button") Return to task list
 
 block append scripts
