--- a/server/views/curfew/curfewAddressReviewV1.pug
+++ b/server/views/curfew/curfewAddressReviewV1.pug
@@ -1,5 +1,5 @@
 extends ../layout
-include ../proposedAddress/includes/addressDetail
+include ../proposedAddress/includes/addressDetailV1
 
 block content
 
@@ -13,12 +13,12 @@ block content
       h2.heading-large Proposed curfew address
 
       if address
-
-        +addressDetail('curfew', address, {}, {})
+        +addressDetailV1('curfew', address, {}, {})
 
     form(method="post")
       input(type="hidden" name="_csrf" value=csrfToken)
       input(type="hidden" name="bookingId" value=bookingId || '')
+      input(type="hidden" name="version" value=version || '')
       div.pure-g.largePaddingBottom
         div.pure-u-1.pure-u-sm-5-12.pure-g
           div.form-group.inline.paddingTop
